# openclaw-windows-native

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PUBLISHING.md  Publish-ToGitHub.cmd  Publish-WithToken.cmd  README.md  SECURITY.md  index.html  manual.html  release.html  security.html  technical.html
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: config.yml  installation-help.yml
.github/workflows/: pages.yml  release.yml  security.yml  verify.yml
assets/: styles.css
companion/: README.md  index.html  package-lock.json  package.json
companion/src/: main.js  styles.css
companion/src-tauri/: Cargo.toml  tauri.conf.json
companion/src-tauri/capabilities/: default.json
companion/src-tauri/src/: main.rs
docs/: OpenClaw_Windows_Native_Technical_Spec.md  OpenClaw_Windows_Native_User_Manual.md  RELEASE_CHECKLIST.md  VALIDATION_ARTIFACTS.md
downloads/: Build-OpenClawWindowsNativeSetup.ps1  Install-OpenClawWindowsNative.ps1  OpenClaw_Windows_Native_Installer.cmd  Uninstall-OpenClawWindowsNative.ps1  Verify-OpenClawWindowsNative.ps1  checksums.sha256  package-manifest.json
downloads/engine/: OpenClawWindowsNative.Engine.psm1
scripts/: Publish-GitHub.ps1  Publish-WithToken.ps1  Test-SecurityAudit.ps1  Test-ValidationArtifactFixtures.ps1
