[package]
name = "openclaw-companion"
version = "0.1.0"
description = "Minimal OpenClaw Windows Native companion shell"
authors = ["OpenClaw Windows Native maintainers"]
license = "MIT"
edition = "2021"
rust-version = "1.77"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
tauri = { version = "2", features = [] }
thiserror = "2"
